tests/data/libsvm/invalid/invalid_colon_in_the_middle.libsvm
1 1:-1.11 :2:-2.90
0 1:-0.52 2:-0.33